# SpeakoFlow

./: .gitignore  .prettierignore  AGENTS.md  BUILD.md  CONTRIBUTING.md  CONTRIBUTING_TRANSLATIONS.md  LICENSE  PRIVACY.md  README.md  TRANSLATIONS_TODO.md  dev.ps1  flake.nix  index.html  package.json  tailwind.config.js  vite.config.ts
.github/: copilot-instructions.md
.github/workflows/: build.yml  release-unsigned.yml  release.yml  test-build.yml
.nix/: bun.nix
Logo/: Logo with text.htm  build-final-logo.mjs  build-logos.mjs  online_viewer_net.htm  package.json
docs/: ASSISTANT_PANEL_REDESIGN.md  FEATURE_PLAN.md  KNOWN_ISSUES.md  PRODUCT.md  PROGRESS.md  PROVIDER_AUDIT.md  RELEASE_CHECKLIST.md  RELEASE_PLAN.md  RELEASE_UPDATES.md  SESSION_PROMPTS.md  TODO_BEFORE_RELEASE.md  future-work.md  prompts-reference.md  web-search-serper-integration.md  web-search-serper-migration.md
docs/agent-screen-and-flow/: PLAN.md
docs/ai-cleanup-reliability/: PLAN.md
docs/engine-migration/: FOLLOW_HANDY.md  PLAN.md  PROMPTS.md  README.md
docs/simplicity-overhaul/: PLAN.md  PROMPTS.md  README.md
docs/ux-overhaul/: PLAN.md  PROMPTS.md  README.md
graphify-out/: .graphify_labels.json  GRAPH_REPORT.md  graph.html  graph.json
nix/: hm-module.nix  module.nix
scripts/: setup-llm-engine.ps1
scripts/ci/: stage-transcribe-libs.sh
src/: App.css  App.tsx  bindings.ts  main.tsx
src-tauri/: .gitignore  Cargo.toml  build.rs  tauri.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/nsis/: installer.nsi
src-tauri/src/: actions.rs  assistant.rs  audio_feedback.rs  cli.rs  clipboard.rs  flow.rs  huggingface.rs  input.rs  lib.rs  llm_client.rs  lock_watch.rs  main.rs  memory.rs  overlay.rs  portable.rs  screenshot.rs  secret_store.rs  settings.rs  signal_handle.rs  transcription_coordinator.rs  tray.rs  tts.rs  utils.rs  web_search.rs
src-tauri/src/audio_toolkit/: mod.rs  replacements.rs  spoken_emojis.rs  text.rs
src-tauri/src/audio_toolkit/audio/: dsp.rs  mod.rs  recorder.rs  resampler.rs  visualizer.rs
src-tauri/src/catalog/: catalog.json  mod.rs
src-tauri/src/commands/: assistant.rs  history.rs  local_llm.rs  memory.rs  mod.rs  models.rs
src-tauri/src/managers/: audio.rs  gguf_meta.rs  history.rs  local_llm.rs  mod.rs  model.rs  model_capabilities.rs  transcription.rs  transcription_mock.rs
src-tauri/src/shortcut/: handler.rs  handy_keys.rs  mod.rs  tauri_impl.rs
src/assistant/: AssistantPanel.css  AssistantPanel.tsx  appearance.ts  index.html  main.tsx  preview.html  preview.tsx  shoot.mjs  snip.html  snip.tsx  useKokoroTts.ts
src/components/: AccessibilityPermissions.tsx  DownloadStatusWidget.tsx  Logo.tsx  LogoLockup.tsx  ScreenRecordingPermission.tsx  Sidebar.tsx  TitleBar.tsx  Wordmark.tsx
src/components/footer/: Footer.tsx  LlmModelSelector.tsx
src/components/icons/: BrandLogos.tsx
src/components/model-selector/: DownloadIndicator.tsx  ModelDropdown.tsx  ModelSelector.tsx  index.ts
src/components/onboarding/: AccessibilityOnboarding.tsx  DownloadProgress.tsx  LlmOnboarding.tsx  ModelCard.tsx  Onboarding.tsx  OnboardingLayout.tsx  ReadyStep.tsx  WelcomeChoiceCard.tsx  index.ts
src/components/settings/: AppearanceSelector.tsx  AudioFeedback.tsx  CustomWords.tsx  GlobalShortcutInput.tsx  HandyKeysShortcutInput.tsx  HistoryLimit.tsx  LanguageSelector.tsx  LiveTranscription.tsx  LiveTranscriptionWindow.tsx  MicrophoneSelector.tsx  MuteWhileRecording.tsx  OutputDeviceSelector.tsx  OverlayStyle.tsx  PostProcessTimeout.tsx  PostProcessingToggle.tsx  PushToTalk.tsx  QuitOnClose.tsx  RecordingRetentionPeriod.tsx  ShortcutInput.tsx  SoundPicker.tsx  TapToLock.tsx  TextReplacements.tsx  TextSizeSelector.tsx  TranslateToEnglish.tsx  VolumeSlider.tsx  index.ts
src/components/settings/PostProcessingSettingsApi/: ProviderModeToggle.tsx  usePostProcessProviderState.ts
src/components/settings/about/: AboutSettings.tsx
src/components/settings/advanced/: AdvancedSettings.tsx
src/components/settings/assistant/: AssistantSection.tsx  AssistantSettings.tsx  CharactersSettings.tsx  LlmCatalog.tsx  MemorySettings.tsx
src/components/settings/debug/: DebugSettings.tsx  KeyboardImplementationSelector.tsx
src/components/settings/dictation/: AiCleanupGroup.tsx  DictationModelCard.tsx  DictationSettings.tsx  GenerateWithFlowGroup.tsx  SpokenEmojiToggle.tsx
src/components/settings/general/: GeneralSettings.tsx  ModelSettingsCard.tsx
src/components/settings/history/: HistorySettings.tsx
src/components/settings/models/: AddCustomModelDialog.tsx  ModelsSettings.tsx
src/components/settings/post-processing/: PostProcessingSettings.tsx
src/components/shared/: AudioWaveform.css  AudioWaveform.tsx  index.ts
src/components/ui/: Alert.tsx  AudioPlayer.tsx  Badge.tsx  Button.tsx  Dropdown.tsx  Input.tsx  ModelCombo.tsx  MoreOptions.tsx  ResetButton.tsx  SectionHeader.tsx  Select.tsx  SettingContainer.tsx  SettingsGroup.tsx  Slider.tsx  SubPage.tsx  TextDisplay.tsx  Textarea.tsx  ToggleSwitch.tsx  Tooltip.tsx  index.ts  tones.ts
src/components/update-checker/: UpdateChecker.tsx
src/hooks/: useLocalLlmEngineStatus.ts  useSettings.ts
src/i18n/locales/ar/: translation.json
src/i18n/locales/bg/: translation.json
src/i18n/locales/cs/: translation.json
src/i18n/locales/de/: translation.json
src/i18n/locales/en/: translation.json
src/i18n/locales/es/: translation.json
src/i18n/locales/fr/: translation.json
src/i18n/locales/he/: translation.json
src/i18n/locales/it/: translation.json
src/i18n/locales/ja/: translation.json
src/i18n/locales/ko/: translation.json
src/i18n/locales/pl/: translation.json
src/i18n/locales/pt/: translation.json
src/i18n/locales/ru/: translation.json
src/i18n/locales/sv/: translation.json
src/i18n/locales/tr/: translation.json
src/lib/: theme.ts
src/lib/utils/: keyboard.ts  modelCategory.ts  modelQuant.ts  modelTranslation.ts
src/overlay/: RecordingOverlay.css  RecordingOverlay.tsx  index.html  main.tsx
src/stores/: modelStore.ts  settingsStore.ts
(+4 files in other folders)
