[package]
name = "speakoflow"
version = "1.0.0"
description = "SpeakoFlow"
authors = ["AbhishekBarali"]
edition = "2021"
license = "MIT"
default-run = "speakoflow"

[profile.dev]
incremental = true # Compile your binary in smaller steps.

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "speakoflow_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

# [[bin]]
# name = "cli"
# path = "src/audio_toolkit/bin/cli.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }
serde_json = "1"
serde = { version = "1", features = ["derive"] }

[dependencies]
once_cell = "1"
tauri = { version = "2.10.2", features = [
  "protocol-asset",
  "macos-private-api",
  "tray-icon",
  'image-png',
] }
tauri-plugin-log = "2.7.1"
tauri-plugin-opener = "2.5.2"
tauri-plugin-store = "2.4.1"
tauri-plugin-os = "2.3.2"
tauri-plugin-clipboard-manager = "2.3.2"
tauri-plugin-macos-permissions = "2.3.0"
tauri-plugin-process = "2.3.1"
rusqlite_migration = "2.3"
tauri-plugin-fs = "2.4.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rdev = { git = "https://github.com/rustdesk-org/rdev" }
cpal = "0.16.0"
anyhow = "1.0.95"
rubato = "0.16.2"
hound = "3.5.1"
log = "0.4.25"
env_filter = "0.1.0"
tokio = { version = "1.43.0", features = ["sync", "macros", "time"] }
vad-rs = { git = "https://github.com/cjpais/vad-rs", default-features = false }
enigo = "0.6.1"
rodio = { git = "https://github.com/cjpais/rodio.git" }
reqwest = { version = "0.12", features = ["json", "stream"] }
futures-util = "0.3"
rustfft = "6.4.0"
strsim = "0.11.0"
natural = "0.5.0"
regex = "1"
chrono = "0.4"
rusqlite = { version = "0.37", features = ["bundled"] }
tar = "0.4.44"
flate2 = "1.0"
zip = "2"
sha2 = "0.10"
transcribe-rs = { version = "0.3.11", features = ["whisper-cpp", "onnx"] }
# transcribe.cpp (ggml/GGUF) engine — added side-by-side with transcribe-rs
# (N2: additive; transcribe-rs 0.3.11 + its features stay untouched). This base
# declaration is backend-less: default-features=false drops the macOS "metal"
# default, so per-platform GPU backends are opted-in only in the target sections
# below. Pinned exactly (pre-1.0 ABI). See docs/engine-migration/PLAN.md Session 1.
transcribe-cpp = { version = "0.1.2", default-features = false }
handy-keys = "0.2.4"
ferrous-opencc = "0.2.3"
clap = { version = "4", features = ["derive"] }
specta = "=2.0.0-rc.22"
specta-typescript = "0.0.9"
tauri-specta = { version = "=2.0.0-rc.21", features = ["derive", "typescript"] }
tauri-plugin-dialog = "2.6"
xcap = { version = "0.9.6", default-features = false, features = ["image"] }
base64 = "0.22.1"
image = { version = "0.25.10", default-features = false, features = ["png", "jpeg"] }

[target.'cfg(unix)'.dependencies]
signal-hook = "0.3"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-autostart = "2.5.1"
tauri-plugin-global-shortcut = "2.3.1"
tauri-plugin-single-instance = "2.3.2"
tauri-plugin-updater = "2.10.0"

[target.'cfg(windows)'.dependencies]
transcribe-rs = { version = "0.3.11", features = ["whisper-vulkan", "ort-directml"] }
# Secure API-key storage via the Windows Credential Manager. `windows-native`
# uses windows-sys (no extra C/system build dependency).
keyring = { version = "3", features = ["windows-native"] }
windows = { version = "0.61.3", features = [
  "Win32_Media_Audio_Endpoints",
  "Win32_System_Com_StructuredStorage",
  "Win32_System_SystemInformation",
  "Win32_System_Variant",
  "Win32_Foundation",
  "Win32_UI_WindowsAndMessaging",
] }
winreg = "0.55"

# transcribe.cpp Windows x86_64 backends: dynamic (loadable) backend DLLs +
# Vulkan GPU acceleration. Build-time prereqs: cmake, Vulkan SDK, and
# SPIRV-Headers (the Vulkan SDK bundles SPIRV-HeadersConfig.cmake; point
# CMAKE_PREFIX_PATH at the SDK). Windows aarch64 uses the static CPU-only
# table just below. See docs/engine-migration/PLAN.md Session 7.
[target.'cfg(all(windows, target_arch = "x86_64"))'.dependencies]
transcribe-cpp = { version = "0.1.2", default-features = false, features = [
  "dynamic-backends",
  "vulkan",
] }

# transcribe.cpp Windows aarch64 (Windows-on-ARM): STATIC, CPU-only (no
# features → the single portable ggml CPU backend is compiled into
# speakoflow.exe, zero DLLs shipped). Rationale (mirrors Handy):
#   * Adreno Vulkan drivers on WoA are immature, and ggml-vulkan's shader
#     generator (vulkan-shaders-gen) does not build under the clang-cl/lld
#     toolchain that ggml's ARM CPU backend requires — so `vulkan` is out.
#   * `dynamic-backends` buys nothing on ARM: GGML_CPU_ALL_VARIANTS is an x86
#     concept, so a DL build there is just one portable CPU module shipped as a
#     DLL. Linking statically ships zero DLLs and sidesteps the installer's
#     per-DLL signtool verify entirely.
# CI pins `-DGGML_NATIVE=OFF -DGGML_OPENMP=OFF` via TRANSCRIBE_CMAKE_ARGS (see
# .github/workflows/build.yml): GGML_NATIVE=OFF targets a portable ARM baseline
# instead of the build runner's CPU, and GGML_OPENMP=OFF avoids clang-cl's
# unresolved LLVM-OMP externals in the static link. This entry is explicit (even
# though it equals the backend-less base `[dependencies]` declaration) to
# document the WoA posture and keep it from silently drifting.
[target.'cfg(all(windows, target_arch = "aarch64"))'.dependencies]
transcribe-cpp = { version = "0.1.2", default-features = false }

[target.'cfg(target_os = "macos")'.dependencies]
tauri-nspanel = { git = "https://github.com/ahkohd/tauri-nspanel", branch = "v2.1" }
transcribe-rs = { version = "0.3.11", features = ["whisper-metal"] }
# transcribe.cpp macOS: STATIC with the Metal GPU backend compiled in (Apple's
# default posture). `metal` does NOT imply `shared`, so there are no runtime
# libs to ship — build.rs staging is a no-op on macOS and nothing is bundled.
transcribe-cpp = { version = "0.1.2", default-features = false, features = [
  "metal",
] }
# Secure API-key storage via the macOS Keychain. `apple-native` uses the
# system Security framework (no extra C/system build dependency).
keyring = { version = "3", features = ["apple-native"] }

[target.'cfg(target_os = "linux")'.dependencies]
gtk-layer-shell = { version = "0.8", features = ["v0_6"] }
gtk = "0.18"
transcribe-rs = { version = "0.3.11", features = ["whisper-vulkan"] }
# transcribe.cpp Linux: dynamic (loadable) backend .so modules + Vulkan GPU
# acceleration (the `dynamic-backends` posture, same as Windows x86_64). Ships a
# shared libtranscribe.so + loadable ggml backend modules; build.rs bakes a
# `$ORIGIN/../lib` rpath into the binary and CI (scripts/ci/stage-transcribe-libs.sh)
# co-locates the modules under /usr/lib so init_backends_default() finds them.
# Build-time prereqs: cmake + Vulkan SDK + libvulkan-dev.
transcribe-cpp = { version = "0.1.2", default-features = false, features = [
  "dynamic-backends",
  "vulkan",
] }
# Secure API-key storage via the Secret Service (GNOME Keyring / KWallet).
# `async-secret-service` + `crypto-rust` use the pure-Rust zbus + RustCrypto
# stack, so the Linux build needs NO libdbus/OpenSSL system headers (keeps the
# export/CI build self-contained). keyring access is funnelled onto a worker
# thread in secret_store.rs because this backend can deadlock if called on the
# main/runtime thread. Absent Secret Service (headless) is handled at runtime
# by falling back to the settings file.
keyring = { version = "3", features = [
  "async-secret-service",
  "tokio",
  "crypto-rust",
] }

# Upstream Handy's tauri fork/patch branch. Required build dependency (not
# our branding) — cjpais maintains a patched tauri-runtime that this app
# still depends on for its Tauri 2.10.2 fixes.
[patch.crates-io]
tauri-runtime = { git = "https://github.com/cjpais/tauri.git", branch = "handy-2.10.2" }
tauri-runtime-wry = { git = "https://github.com/cjpais/tauri.git", branch = "handy-2.10.2" }
tauri-utils = { git = "https://github.com/cjpais/tauri.git", branch = "handy-2.10.2" }
# Vendored handy-keys with a fix for OS-level stuck keys on Windows: the
# low-level hook now blocks a key's UP (and auto-repeats) if-and-only-if it
# blocked that key's DOWN, instead of re-evaluating the hotkey match per event.
# Re-evaluating desyncs down/up whenever modifiers change mid-press (sloppy
# press order, tap-to-lock Shift taps, hotkeys registered mid-hold) and left
# keys "pressed forever" system-wide. See vendor/handy-keys/src/platform/windows/listener.rs.
handy-keys = { path = "vendor/handy-keys" }

[dev-dependencies]
tempfile = "3"

[profile.release]
lto = true
codegen-units = 1
strip = true
panic = "unwind"
